Added encoding comment.

--- a/views/home.haml
+++ b/views/home.haml
@@ -1,9 +1,11 @@
+-# encoding: utf-8
+
 .hola
   Hola! Esta es la API del Censo Argentino 2010.
 
 .spec
 
-  M&eacute;todos disponibles:
+  Métodos disponibles:
   %br
 
   %a{:href => '/raw_data'}
