Mejoras de diseño, paso a bootstrap.css

--- a/app/views/home.haml
+++ b/app/views/home.haml
@@ -1,67 +1,78 @@
 -# encoding: utf-8
 
-.hola
+.page-header 
   %h1
-    Hola!
-    
-  Esta es la API del Censo Argentino 2010.
+    Version 1.0
+  
+%p 
+  Esta es la API del Censo Argentino 2010 hecha sobre datos preliminares. 
 
-.spec
+%h2
+  Métodos disponibles
 
-  %h1
-    Métodos disponibles
+%p
+  Los métodos se acceden a través de una interfaz HTTP REST y devuelven JSON.    
+
+.methods
   %p
-    Los métodos se acceden a través de una interfaz HTTP REST y devuelven JSON.
-
-  %p
-    %h2
+    %h3
       Provincias
     %a{:href => '/provincias'}
-      GET /provincias
+      %pre
+        GET /provincias
   %p
-    %h2
+    %h3
       Cabeceras
     %a{:href => '/cabeceras'}
-      GET /cabeceras
+      %pre
+        GET /cabeceras
   %p
-    %h2
+    %h3
       Departamentos
     %a{:href => '/departamentos'}
-      GET /departamentos
+      %pre
+        GET /departamentos
   %p
-    %h2
+    %h3
       Datos por Provincia
     %a{:href => '/buenos_aires'}
-      GET /buenos_aires
+      %pre
+        GET /buenos_aires
     (En general, GET /nombre_de_provincia)
   %p
-    %h2
+    %h3
       Datos por Departamento
     %a{:href => '/buenos_aires/san_nicolas'}
-      GET /buenos_aires/san_nicolas
+      %pre    
+        GET /buenos_aires/san_nicolas
     (En general, GET /nombre_de_provincia/nombre_de_departamento)    
   %p
-    %h2
+    %h3
       Personas por Vivienda
     %a{:href => '/personas_por_vivienda'}
-      GET /personas_por_vivienda
+      %pre    
+        GET /personas_por_vivienda
   %p
-    %h2
+    %h3
       Personas por Vivienda por Provincia
     %a{:href => '/buenos_aires/personas_por_vivienda'}
-      GET /nombre_de_provincia/personas_por_vivienda
+      %pre    
+        GET /nombre_de_provincia/personas_por_vivienda
   %p
-    %h2
+    %h3
       Personas por Vivienda por Departamento
     %a{:href => '/buenos_aires/san_nicolas/personas_por_vivienda'}
-      GET /buenos_aires/san_nicolas/personas_por_vivienda                
+      %pre    
+        GET /buenos_aires/san_nicolas/personas_por_vivienda                
   %p
-    %h2
+    %h3
       Raw Data
     %a{:href => '/raw_data'}
-      GET /raw_data
+      %pre    
+        GET /raw_data
   %p
-    %h2
+    %h3
       Version
     %a{:href => '/version'}
-      GET /version
+      %pre    
+        GET /version
