--- a/app/views/home.haml
+++ b/app/views/home.haml
@@ -2,10 +2,10 @@
 
 .page-header 
   %h1
-    Version 1.0
+    Version 2.0
   
 %p 
-  Esta es la API del Censo Argentino 2010 hecha sobre datos preliminares. 
+  Esta es la API del Censo Argentino 2010 hecha sobre datos finales. 
 
 %h2
   Métodos disponibles
