Agregué énfasis a datos preliminares.

--- a/app/views/home.haml
+++ b/app/views/home.haml
@@ -5,7 +5,7 @@
     Version 1.0
   
 %p 
-  Esta es la API del Censo Argentino 2010 hecha sobre datos preliminares. 
+  Esta es la API del Censo Argentino 2010 hecha sobre <strong><em>datos preliminares</em></strong>. 
 
 %h2
   Métodos disponibles
