Cambié la referencia a GH>

--- a/app/views/layout.haml
+++ b/app/views/layout.haml
@@ -22,4 +22,4 @@
           %a{:href => "#"}
             Back to top
         %p
-          Desarrollado por <a href="http://twitter.com/etagwerker" target="_blank">@etagwerker</a>. Código abierto: <a href="http://github.com/etagwerker/censo2010">Github</a>
+          Desarrollado por <a href="http://twitter.com/etagwerker" target="_blank">@etagwerker</a>. Código abierto: <a href="https://github.com/etagwerker/censo2010/tree/v2">Github</a>
