Agregué versión al home.haml

--- a/app/views/home.haml
+++ b/app/views/home.haml
@@ -2,7 +2,8 @@
 
 .page-header 
   %h1
-    Version 2.0
+    Version 
+    = @version
   
 %p 
   Esta es la API del Censo Argentino 2010 hecha sobre datos finales. 
